
List of major changes and improvements between releases
=======================================================

Yosys 0.10 .. Yosys 0.10-dev
--------------------------


Yosys 0.9 .. Yosys 0.10
--------------------------

 * Various
    - Added automatic gzip decompression for frontends
    - Added $_NMUX_ cell type
    - Added automatic gzip compression (based on filename extension) for backends
    - Improve attribute and parameter encoding in JSON to avoid ambiguities between
      bit vectors and strings containing [01xz]*
    - Improvements in pmgen: subpattern and recursive matches
    - Support explicit FIRRTL properties
    - Improvements in pmgen: slices, choices, define, generate
    - Added "_TECHMAP_WIREINIT_*_" parameter and "_TECHMAP_REMOVEINIT_*_" wire for "techmap" pass
    - Added +/mul2dsp.v for decomposing wide multipliers to custom-sized ones
    - Added new frontend: rpc
    - Added --version and -version as aliases for -V
    - Improve yosys-smtbmc "solver not found" handling
    - Improved support of $readmem[hb] Memory Content File inclusion
    - Added CXXRTL backend
    - Use YosysHQ/abc instead of upstream berkeley-abc/abc
    - Added WASI platform support.
    - Added extmodule support to firrtl backend
    - Added $divfloor and $modfloor cells
    - Added $adffe, $dffsre, $sdff, $sdffe, $sdffce, $adlatch cells
    - Added "_TECHMAP_CELLNAME_" parameter for "techmap" pass
    - Added firrtl backend support for generic parameters in blackbox components
    - Added $meminit_v2 cells (with support for write mask)
    - Added $mem_v2, $memrd_v2, $memwr_v2, with the following features:
      - write priority masks, per write/write port pair
      - transparency and undefined collision behavior masks, per read/write port pair
      - read port reset and initialization
      - wide ports (accessing a naturally aligned power-of-two number of memory cells)

 * New commands and options
    - Added "write_xaiger" backend
    - Added "read_xaiger"